# astarte-message-hub

./: Cargo.toml  README.md
examples/: simple_node.rs
proto/astarteplatform/msghub/: astarte_message.proto  astarte_type.proto  node.proto
src/: astarte_message_hub.rs  astarte_sdk_types.rs  config.rs  error.rs  lib.rs  main.rs  types.rs
src/data/: astarte.rs  mod.rs
