# This file is part of Astarte.
#
# Copyright 2022 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0


[package]
name = "astarte-message-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.0"
prost = "0.11.0"
prost-types = "0.11.1"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
log = "0.4.17"
env_logger = "0.9.0"
chrono = "0.4.22"
thiserror = "1.0"
astarte_sdk = {git ="https://github.com/astarte-platform/astarte-device-sdk-rust.git" }
async-trait = "0.1.56"
serde = "1.0.139"

[build-dependencies]
tonic-build = "0.8.0"
